<resources>
    <string name="app_name">友颂</string>

    <string name="title_ad">发现</string>
    <string name="title_friend">好友</string>
    <string name="title_me">我</string>

    <string name="title_detail">详情</string>
    <string name="title_share_friend">分享好友</string>
    <string name="title_my_ad">我的广告</string>
    <string name="title_published">已发布</string>
    <string name="title_unpublished">未发布</string>
    <string name="title_personal_authentication">个人认证</string>
    <string name="title_enterprise_certification">企业认证</string>

    <string name="name_submit">提交</string>
    <string name="name_recommend_friend">推荐好友</string>
    <string name="name_send_moments">发送朋友圈</string>
    <string name="name_copy_url">复制链接</string>
    <string name="name_withdraw">提现</string>
    <string name="name_publish_ad">发布广告</string>
    <string name="name_authenticate">认证</string>
    <string name="name_help">帮助</string>
    <string name="name_wechat_login">微信登陆</string>

    <string name="name_copy_of_business_license">营业执照副本</string>
    <string name="name_submit_review">提交审核</string>
    <string name="name_recharge">充值</string>
    <string name="name_set_answer">设置答案</string>
    <string name="name_publish_form">发布形式</string>
    <string name="name_promotion_publish">推广型发布</string>
    <string name="name_directional_publish">定向型发布</string>
    
    <string name="name_user_filter">用户筛选</string>
    <string name="name_filter_result">筛选结果</string>
    <string name="name_not_limited">不限</string>
    <string name="name_sex">性别</string>
    <string name="name_male">男</string>
    <string name="name_female">女</string>
    <string name="name_age">年龄</string>
    <string name="name_to">至</string>
    <string name="name_target_city">目标城市</string>
    
    <string name="name_user_unit_price">单用户金额</string>
    <string name="name_user_count">用户总数</string>
    <string name="name_total_amount">总金额</string>
    <string name="name_account_balance">账户余额</string>
    
    <string name="name_need_invoice">需要发票</string>
    <string name="name_not_need_invoice">无需发票</string>

    <string name="name_a">A</string>
    <string name="name_b">B</string>
    <string name="name_c">C</string>
    <string name="name_d">D</string>
    <string name="name_not_retry">不可重答</string>
    <string name="name_once">一次</string>
    <string name="name_twice">两次</string>

    <string name="label_income">收益:</string>
    <string name="label_over">余额:</string>
    <string name="label_total_amount">总金额:</string>
    <string name="label_a">A:</string>
    <string name="label_b">B:</string>
    <string name="label_c">C:</string>
    <string name="label_d">D:</string>
    <string name="label_correct_answer">正确答案:</string>
    <string name="label_retry_times">错误重答次数:</string>

    <string name="hint_withdraw_amount">提现金额</string>
    <string name="hint_recharge_amount">充值金额</string>
    <string name="hint_real_name">真实姓名</string>
    <string name="hint_id_number">身份证号</string>
    <string name="hint_corporation_name">法人姓名</string>
    <string name="hint_corporation_id_number">法人身份证号</string>
    
    <string name="hint_question">设置提问内容，限制120字</string>

    <string name="prompt_click_upload_business_license">点击上传营业执照副本</string>
    <string name="prompt_click_upload_cover">点击上传广告封面</string>
    <string name="prompt_click_upload_content">点击上传广告正文</string>
    

</resources>
