<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.yousong.yousong.model.local.AdsDetail"/>

        <variable
            name="holder"
            type="com.yousong.yousong.operator.OnCreateAdsOperator"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_question"
                android:maxLength="120"
                android:text="@={data.question.content}"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing"
            android:text="@string/name_set_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:useDefaultMargins="true">

            <TextView
                android:text="@string/label_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:text="@={data.question.option[0].content}"
                app:layout_gravity="fill_horizontal"/>

            <TextView
                android:text="@string/label_b"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:text="@={data.question.option[1].content}"
                app:layout_gravity="fill_horizontal"/>

            <TextView
                android:text="@string/label_c"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:goneUnless="@{data.question.option.size() > 2}"/>

            <EditText
                android:text="@={data.question.option[2].content}"
                app:goneUnless="@{data.question.option.size() > 2}"
                app:layout_gravity="fill_horizontal"/>

            <TextView
                android:text="@string/label_d"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:goneUnless="@{data.question.option.size() > 3}"/>

            <EditText
                android:text="@={data.question.option[3].content}"
                app:goneUnless="@{data.question.option.size() > 3}"
                app:layout_gravity="fill_horizontal"/>

        </android.support.v7.widget.GridLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:drawablePadding="@dimen/layout_default_spacing"
                android:drawableStart="@drawable/ic_add_green_a400_24dp"
                android:gravity="center_vertical"
                android:onClick="@{holder::onAddOptionClick}"
                android:text="@string/name_add_option"
                app:goneUnless="@{data.question.option.size() &lt; 4}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawablePadding="@dimen/layout_default_spacing"
                android:drawableStart="@drawable/ic_remove_red_a400_24dp"
                android:gravity="center_vertical"
                android:onClick="@{holder::onRemoveOptionClick}"
                android:text="@string/name_remove_option"
                app:goneUnless="@{data.question.option.size() > 2}"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_correct_answer"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_default_spacing"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/a_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={data.question.option[0].answer}"
                    android:text="@string/name_a"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/b_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={data.question.option[1].answer}"
                    android:text="@string/name_b"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/c_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={data.question.option[2].answer}"
                    android:text="@string/name_c"
                    app:invisibleUnless="@{data.question.option.size() > 2}"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/d_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={data.question.option[3].answer}"
                    android:text="@string/name_d"
                    app:invisibleUnless="@{data.question.option.size() > 3}"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_default_spacing"
                android:text="@string/label_retry_times"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={data.question.retrySelector[0].checked}"
                android:text="@string/name_not_retry"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={data.question.retrySelector[1].checked}"
                android:text="@string/name_once"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={data.question.retrySelector[2].checked}"
                android:text="@string/name_twice"/>

        </LinearLayout>

    </LinearLayout>

</layout>